* bug 1054: Don't abort downloads when closing the terminal from which
  they were started.  When such a download ends, display the message
  in the most recently used terminal.  If the user chooses
  ``Background and Notify'' via the download manager in some terminal,
  reassociate the download with that terminal.  These changes do not
  apply to downloads to external handlers.
* Really retry forever when connection.retries = 0.
* enhancement: Session-specific options.  Any options changed with
  toggle-* actions no longer affect other tabs or other terminals.
* enhancement: Domain-specific options.  Use set_domain in elinks.conf
  to e.g. disable cookies for google.com.  The option manager window
  does not yet support this.
* enhancement 867: Use bracketed paste mode on xterm.  This requires
  xterm patch #228 or later configured with --enable-readline-mouse.
* enhancement 824: Experimental support for combining characters.
  See features.conf for details.
* enhancement: Add a new entry Link Info under Link main menu.
* enhancement: New option protocol.http.compression.
* enhancement: Indicate backgrounded downloads using an unused led.
* enhancement: Display the number of ECMAScript interpreters that have
  been allocated for documents in the Resources dialog.
* Fedora enhancement 346861: Add support for nss_compat_ossl library
  (OpenSSL replacement).
* enhancement: Scrolling the entire contents of dialog boxes.
  Especially useful for multi-file BitTorrent downloads.

//////////////////////////////////////////////////////////////////////
The following changes should be removed from NEWS before ELinks 0.13.0
is released.  They are currently listed here just to show that they
have already been considered.

* Fixed bugs that were not in previous versions:
  - critical bug 1009: assertion failure in add_snippets()
    (mostly reverted)
//////////////////////////////////////////////////////////////////////

ELinks 0.12pre2.GIT now:
------------------------
