@@ -40,6 +40,8 @@ Miscellaneous:
   ``Background and Notify'' via the download manager in some terminal,
   reassociate the download with that terminal.  These changes do not
   apply to downloads to external handlers.
+* Don't crash when the search-toggle-regex action is used and no regular
+  expression support is compiled in.
 * Really retry forever when connection.retries = 0.
 * enhancement: Session-specific options.  Any options changed with
   toggle-* actions no longer affect other tabs or other terminals.
